sdm710-common: Enable display burn-in-protection in Ambient Display
Change-Id: I3351fa93259b3e4a23b9331ebecc3b0c2c1f9e93
Signed-off-by: Albert I <kras@raphielgang.org>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -403,6 +403,9 @@
         <item>-44</item>
     </integer-array>
 
+    <!-- If true, the display will be shifted around in ambient mode. -->
+    <bool name="config_enableBurnInProtection">true</bool>
+
     <!-- Whether device supports double tap to wake -->
     <bool name="config_supportDoubleTapWake">true</bool>
 
